# cmake-cpp-example

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  main.cpp  test.cpp
.buildkite/: pipeline-alternative.yml  pipeline.yml  template.yml
